# rustcad

./: Cargo.toml  README.md  TECH_SPEC.md  WORKING_STATE.md
crates/rustcad-app/: Cargo.toml
crates/rustcad-app/src/: app.rs  camera.rs  main.rs  renderer.rs  shader.wgsl  sketch_mode.rs
crates/rustcad-core/: Cargo.toml
crates/rustcad-core/src/: lib.rs  persist.rs
crates/rustcad-geom/: Cargo.toml
crates/rustcad-geom/src/: lib.rs
crates/rustcad-sketch/: Cargo.toml
crates/rustcad-sketch/src/: constraint.rs  dimension.rs  lib.rs  profiles.rs  query.rs  solver.rs
