[package]
name = "rustcad-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rustcad-sketch.workspace = true
rustcad-geom.workspace = true
serde.workspace = true
ron.workspace = true
thiserror.workspace = true
slotmap.workspace = true
