[package]
name = "rustcad-sketch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
slotmap.workspace = true
nalgebra.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
